# YoloToolkit

./: .gitignore  AGENTS.md  CameraParams_header.py  IMPLEMENTATION_PLAN.md  MvCameraControl_class.py  README.md  camera_const.py  convert_onnx.py  fix_yolo_pose.py  hikcam.py  onnx_test.py  openvino_async.py  openvino_test.py  pyproject.toml  run_detector.sh  system_optimize.sh  yolo-pose-onnx.py  yolo-pose_dnn.py  yolo-pose_openvino.py  yolo-pose_openvino_singleProcess.py  yolo-pose_test.py  yolo_test.py
docs/: dependency_install_log.txt
runs/pose/train/: args.yaml
runs/pose/yolo26n_pose_augmented_20260716_001/: args.yaml
runs/pose/yolo26n_pose_augmented_20260716_001-2/: args.yaml  results.csv
scripts/data_collection/: hikvision_capture.py  run_hikvision_capture.bat
scripts/data_processing/: augment_pose_dataset.py  filter_motion_blur.py  run_augment_pose_dataset.bat  run_augment_pose_preview.bat  run_filter_motion_blur.bat  run_split_pose_dataset.bat  split_pose_dataset.py
scripts/inference/: __init__.py  onnx_demo.py  openvino_async.py  openvino_demo.py  run_detector.sh  yolo_demo.py  yolo_pose_demo.py  yolo_pose_dnn.py  yolo_pose_openvino.py  yolo_pose_realtime.py
scripts/training/: run_train_yolo26n_pose.bat  train_yolo26n_pose.py
src/yolo_toolkit/: __init__.py
src/yolo_toolkit/camera/: __init__.py  camera_params_header.py  hikvision.py  mv_camera_control.py
src/yolo_toolkit/conversion/: __init__.py  kmodel.py  onnx.py  openvino.py  (+1 more)
tests/: test_motion_blur_filter.py  test_package_layout.py  test_pose_augmentation.py  test_pose_dataset_split.py
